--- a/mtr/map.jinja
+++ b/mtr/map.jinja
@@ -23,7 +23,7 @@
     'common': {
         'mtr_path': '/usr/local/bin/mtr',
         'out_dir' : '/tmp/outputdata/mtr',
-        'cmd_cli_args': '-r -c 10 -x '
+        'cmd_cli_args': '-r -c 10 '
     }
 
 }, grain='os_family', merge=salt['pillar.get']('mtr:execute:lookup'), default='Debian', base='common')%}
