disabled ping and mtr, added parallel states

--- a/mtr/map.jinja
+++ b/mtr/map.jinja
@@ -26,8 +26,8 @@
         'mtr_path': '/usr/local/bin/mtr',
         'out_dir' : '/tmp/outputdata/mtr',
         'cmd_cli_args': '-r -b -z -w -m 50 -c 10 ',
-        'do_ping' : True,
-        'do_mtr': True,
+        'do_ping' : False,
+        'do_mtr': False,
         'do_paping': True,
         'paping_port': 22001
     }
